just: define chezmoi commands

--- a/private_dot_config/just/justfile
+++ b/private_dot_config/just/justfile
@@ -1,6 +1,8 @@
 set shell := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", "xtrace", "-c"]
 set script-interpreter := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", "xtrace", "-c"]
 
+mod chezmoi
+
 # Install Just
 init:
     curl --fail --silent --location --show-error https://just.systems/install.sh | bash -s -- --to=~/.local/bin
