--- a/private_dot_config/just/justfile
+++ b/private_dot_config/just/justfile
@@ -2,6 +2,7 @@ set shell := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", 
 set script-interpreter := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", "xtrace", "-c"]
 
 mod chezmoi
+mod mise
 
 # Install Just
 init:
