just: define bash commands

--- a/private_dot_config/just/justfile
+++ b/private_dot_config/just/justfile
@@ -1,6 +1,7 @@
 set shell := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", "xtrace", "-c"]
 set script-interpreter := ["bash", "-o", "errexit", "-o", "nounset", "-o", "pipefail", "-o", "xtrace", "-c"]
 
+mod bash
 mod brew
 mod chezmoi
 mod gpg
