--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -21,3 +21,8 @@ url = "https://github.com/progfolio/elpaca.git"
 [".local/share/nvim/lazy/lazy.nvim"]
 type = "git-repo"
 url = "https://github.com/folke/lazy.nvim.git"
+
+# Doomemacs
+[".config/doomemacs"]
+type = "git-repo"
+url = "https://github.com/doomemacs/doomemacs"
